# pkg/apispec/types.gen.go
@@ -279,7 +279,6 @@ const (
 const (
 	AllowAll TplSandboxNetworkPolicyMode = "allow-all"
 	BlockAll TplSandboxNetworkPolicyMode = "block-all"
-	Custom   TplSandboxNetworkPolicyMode = "custom"
 )
 
 // Defines values for UpdateTeamMemberRequestRole.
@@ -348,6 +347,7 @@ type BandwidthPolicySpec struct {
 	EgressRateLimit  *RateLimitSpec  `json:"egressRateLimit,omitempty"`
 	IngressRateLimit *RateLimitSpec  `json:"ingressRateLimit,omitempty"`
 	SandboxId        *string         `json:"sandboxId,omitempty"`
+	Version          *string         `json:"version,omitempty"`
 }
 
 // Capabilities defines model for Capabilities.
@@ -624,15 +624,18 @@ type MoveFileRequest struct {
 
 // NetworkEgressPolicy defines model for NetworkEgressPolicy.
 type NetworkEgressPolicy struct {
-	AllowedDomains *[]string `json:"allowedDomains,omitempty"`
-	AllowedIPs     *[]string `json:"allowedIPs,omitempty"`
-	BlockedIPs     *[]string `json:"blockedIPs,omitempty"`
+	AllowedDomains *[]string   `json:"allowedDomains,omitempty"`
+	AllowedCIDRs   *[]string   `json:"allowedCidrs,omitempty"`
+	AllowedPorts   *[]PortSpec `json:"allowedPorts,omitempty"`
+	DeniedDomains  *[]string   `json:"deniedDomains,omitempty"`
+	DeniedCIDRs    *[]string   `json:"deniedCidrs,omitempty"`
+	DeniedPorts    *[]PortSpec `json:"deniedPorts,omitempty"`
 }
 
 // NetworkIngressPolicy defines model for NetworkIngressPolicy.
 type NetworkIngressPolicy struct {
-	AllowedIPs *[]string `json:"allowedIPs,omitempty"`
-	BlockedIPs *[]string `json:"blockedIPs,omitempty"`
+	AllowedCIDRs *[]string `json:"allowedCidrs,omitempty"`
+	DeniedCIDRs  *[]string `json:"deniedCidrs,omitempty"`
 }
 
 // NodeAffinity defines model for NodeAffinity.
@@ -708,6 +711,13 @@ type PoolStrategy struct {
 	AutoScale bool  `json:"autoScale"`
 	MaxIdle   int32 `json:"maxIdle"`
 	MinIdle   int32 `json:"minIdle"`
+}
+
+// PortSpec defines model for PortSpec.
+type PortSpec struct {
+	EndPort  *int32  `json:"endPort,omitempty"`
+	Port     int32   `json:"port"`
+	Protocol *string `json:"protocol,omitempty"`
 }
 
 // PreStopHook defines model for PreStopHook.
